--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.8.0",
