--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.7",
+    "embla-carousel-autoplay": "^7.0.9",
     "embla-carousel-react": "^7.0.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
